--- a/clustering/PCA_Kmeans.ipynb
+++ b/clustering/PCA_Kmeans.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#performing PCA then kmeans analysis on the MD trajectory, then extracting 10 centroids for docking"
+    "#performing PCA clustering on all atoms then kmeans analysis on the MD trajectory, then extracting 10 centroids for docking"
    ]
   },
   {
