--- a/clustering/PCA_Kmeans_CBA.ipynb
+++ b/clustering/PCA_Kmeans_CBA.ipynb
@@ -132,7 +132,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#plotting the free energy in subplots for tics 0-5\n",
+    "#plotting the free energy in subplots for pcs 0-5\n",
     "\n",
     "for s in range(6):\n",
     "    fig, ax = plt.subplots(1, 6, sharex='col', sharey='row', figsize = (20,3.4)) #creating 1x6 subplot grid\n",
